[Restfulapi][Peter]refactor: finish company mapping